# plumbob

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  ci.yml  publish.yml  release-prep.yml  release-tag.yml
doc/: architecture.md  model.md  roadmap.md  setup.md  testing.md
examples/simulate/: Cargo.toml
examples/simulate/src/: main.rs
src/: lib.rs  scdc.rs  trace.rs  training.rs  types.rs
src/training/: mod.rs  sim.rs  tests.rs
