[package]
name = "plumbob"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A library for reading and interpreting display capability data (EDID)."
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/DracoWhitefire/plumbob"
keywords = ["display", "hdmi", "link-training", "no-std"]
categories = ["hardware-support", "embedded"]

[dependencies]
