[package]
name = "plumbob"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "FRL link training state machine for HDMI 2.1"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/DracoWhitefire/plumbob"
keywords = ["hdmi", "link-training", "frl", "embedded", "no-std"]
categories = ["hardware-support", "embedded", "no-std"]

[dependencies]
culvert = { path = "../culvert" }
hdmi-hal = { path = "../hdmi-hal" }
display-types = { path = "../display-types", default-features = false }
