[package]
name = "plumbob"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "FRL link training state machine for HDMI 2.1"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/DracoWhitefire/plumbob"
keywords = ["hdmi", "link-training", "frl", "embedded", "no-std"]
categories = ["hardware-support", "embedded", "no-std"]

[features]
alloc = []
std = ["alloc"]

[dependencies]
hdmi-hal = { version = "0.4.0", default-features = false }
display-types = { version = "0.3.1", default-features = false }
