[workspace]

[package]
name = "simulate"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
plumbob = { path = "../..", features = ["std"] }
hdmi-hal = { path = "../../../hdmi-hal" }
display-types = { path = "../../../display-types" }

[patch.crates-io]
display-types = { path = "../../../display-types" }
